========================
   beancount: CHANGES
========================
Note: This file contains only changes in the 'default' branch.


2018-04-01

  - Merged PR64 from yagebu@ (Jacob Schnitzer), which makes the Inventory class
    rely on the fact that Position is immutable in order to avoid unnecessary
    copies. This yields an 18% speedup with no difference.


2018-03-31

  - Fixed #10: "print from close_date" causes problems on account open. This was
    stemming from a bug in the implementation of the FROM clause execution. I
    changed the "entry" context functions to also accept a RowContext object, as
    the simple functions may be called in either entry or posting context.

    (The SQL shell remains the part of Beancount which is severely undertested
    and wading into that code once again has convinced me I need to rewrite the
    shell from scratch, it'll be simpler and better. The distinction between
    entry and posting context will go away in the next version.)

  - Fixed #120: Documents directive with a trailing slash fails.


2018-03-28

  - Fixed failing test in amount_test probably due to some recent merges.


2018-03-27

  - Completed PR #59 which adds support for globbing patterns in includes,
    inserting a chdir() around glob.glob() to handle expansion of relative
    filenames. (Credits to Martin Michlmayr for submitting the patch in the
    first place.)


2018-03-27

  - Released 2.0.0. Today we're starting versioning Beancount. Many people have
    been waiting for this in order to manage their dependencies (e.g. Fava
    users).

    We're loosely adopting semantic versioning (https://semver.org/) where bug
    fixes will be posted as 0.0.x releases, and new features that don't break
    existing functionality (nor change it too much) will be posted as 0.x.0
    releases.

    Note: There's nothing special about this particular point in time, other
    than I haven't added much features in the last six months and have mainly